<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016, Gayan Weerakutti <gayan@linuxdeveloper.space>
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_move_to_inbox_black_48dp"
        android:contentDescription="@null"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center_vertical"
        android:tint="@color/colorAppIconDefault"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label"
                style="@style/Base.TextAppearance.AppCompat.Display1" />
            <TextView
                android:id="@+id/percentage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/item_label" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="50" />

        <!-- n/a of n/a GB TextView -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/remain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/__"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/of"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />
            <TextView
                android:id="@+id/max_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/__"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />
            <TextView
                android:id="@+id/gb_mb_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gb" />
        </LinearLayout>
    </LinearLayout>
</merge>
