<!--
  ~ Copyright (c) 2016, Gayan Weerakutti <gayan@linuxdeveloper.space>
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <space.linuxdeveloper.osum.app.view.AnimatedBackground
        android:id="@+id/animated_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        custom:backgroundImage="@drawable/animated_background">
    </space.linuxdeveloper.osum.app.view.AnimatedBackground>

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone">
    </WebView>

    <!-- Login container -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_centerVertical="true">

        <!-- Username -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/name_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_username"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="@null"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:layout_gravity="bottom"
                android:typeface="monospace"
                android:textColor="#e6e9ec" />
        </LinearLayout>

        <!-- Password -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="40dp">
            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="@null"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textWebPassword"
                android:layout_gravity="bottom"
                android:textColor="@android:color/background_light"
                android:typeface="monospace" />
        </LinearLayout>

        <!-- Captcha -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/captcha_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_fingerprint_white_24dp"
                android:contentDescription="@string/captcha_view_desc"/>
            <EditText
                android:id="@+id/captcha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_wait"
                android:typeface="monospace"
                android:gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_button"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:scaleType="fitCenter"
        android:layout_margin="30dp"
        android:contentDescription="@string/login_button_desc" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminateOnly="true"
        android:indeterminate="false"
        android:layout_alignParentBottom="true"
        android:visibility="invisible" />
</RelativeLayout>
